implement input state change

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -55,6 +55,7 @@ a
   display: inline-block
   text-align: left
   position: relative
+  width: $card-content-width
   img
     width: 100%
 
@@ -62,7 +63,6 @@ a
   &.card
     text-align: center
   &.card-content
-    width: $card-content-width
     top: 45px
   a
     color: $mute-color
@@ -71,3 +71,6 @@ a
     width: 100%
     text-align: right
     
+.signup
+  &.card-content
+    top: 150px
