--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -1,76 +1,68 @@
-$primary-color: #fcb500
-$secondary-color: #1c2024
-$mute-color: #5A5D60
-$bg-color: #fbfafa
+@import color
+@import login
+@import home
 
 $card-content-width: 207px
 
-@font-face 
-  font-family: 'Noto Sans TC'
-  font-style: normal
-  font-weight: 400
-  src: url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Light.woff2) format('woff2'), url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Light.woff) format('woff'), url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Light.otf) format('opentype')
+@font-face
+	font-family: 'Noto Sans TC'
+	font-style: normal
+	font-weight: 400
+	src: url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Light.woff2) format('woff2'), url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Light.woff) format('woff'), url(//fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Light.otf) format('opentype')
 
 *
-  font-family: 'Noto Sans TC', sans-serif
+	font-family: 'Noto Sans TC', sans-serif
+	background-color: $bg-color
 
 .bottom-line-input
-  border-bottom: 3px solid $secondary-color
-  color: $secondary-color
-  input
-    display: inline-flex
-    justify-content: flex-end
-    border: none
-    width: $card-content-width * 0.55
-    background-color: $bg-color
-  label
-    display: inline-block
-  label, input
-    margin: 6px
+	border-bottom: 3px solid $secondary-color
+	color: $secondary-color
+	display: inline-flex
+	input
+		width: 1%
+		flex: 1 1 auto
+		font-size: 12px
+		border: none
+	label
+		display: inline-block
+	label, input
+		margin: 6px
 
 button
-  cursor: pointer
-  border: 0px
-  border-radius: 0px 26px 26px 0px
-  margin: 9px 0px 0px 
-  font-size: 16px
-  height: 51px
-  width: 100%
-  color: white
-  background-color: $primary-color
+	cursor: pointer
+	border: 0px
+	border-radius: 0px 26px 26px 0px
+	margin: 9px 0px 0px
+	font-size: 16px
+	height: 51px
+	width: 100%
+	color: white
+	background-color: $primary-color
 
 a
-  text-decoration: none
-  
-  
+	text-decoration: none
+
+
 .card
-  display: inline-block
-  width: 360px
-  height: 510px
-  background-color: $bg-color
-  box-shadow: .5px 1px 30px rgba(0, 0, 0, .4)
-  border-radius: 2px
+	display: inline-block
+	padding: 5px
+	background-color: $bg-color
+	border-radius: 2px
+	box-shadow: 0 1px 3px rgba(0, 0,0, .12), 0 1px 2px rgba(0, 0, 0, .24)
 
 .card-content
-  display: inline-block
-  text-align: left
-  position: relative
-  width: $card-content-width
-  img
-    width: 100%
+	margin: 18px
+	text-align: left
+	position: relative
+	img
+		width: 100%
 
-.login
-  &.card
-    text-align: center
-  &.card-content
-    top: 45px
-  a
-    color: $mute-color
-    font-size: 14px
-    display: block
-    width: 100%
-    text-align: right
-    
-.signup
-  &.card-content
-    top: 150px
+.title-bar
+	width: 100%
+	display: flex
+	flex-flow: row wrap
+	justify-content: space-between
+	align-items: baseline
+
+
+
