implement faming clock

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -12,6 +12,7 @@ $card-content-width: 207px
 
 *
 	font-family: 'Noto Sans TC', sans-serif
+body
 	background-color: $bg-color
 
 .bottom-line-input
@@ -64,5 +65,12 @@ a
 	justify-content: space-between
 	align-items: baseline
 
-
+.toolbar
+	background-color: $primary-color
+	ul
+		display: flex
+		justify-content: flex-end
+	li
+		display: inline-block
+		margin: 10px
 
