--- a/src/style/_calendar.sass
+++ b/src/style/_calendar.sass
@@ -1,8 +1,22 @@
 .box
     width: 40px
-    height: 18px
+    height: 27px
     background-color: $primary-color
     margin: 0px
+    display: inline-block
     
-.box:nth-child(even)
-    margin-bottom: 5px
+.box-container
+    display: flex
+    font-size: 14px
+    span 
+        margin-left: 12px
+    .hr
+        font-size: 11px
+        text-align: right
+        color: $mute-color
+        width: 30px
+        margin-right: 10px
+    input
+        font-size: 12px
+        border: 0px
+        border-bottom: $primary-color 1px solid
